force-app/main/default/objects/Storefront_Hours_of_Operation__c/Storefront_Hours_of_Operation__c.object-meta.xml
<CustomObject>
    <description>This object tracks the detailed operating schedule for each storefront, including regular hours, special hours for holidays or events, and any exceptions. It allows for precise scheduling and ensures accurate representation of a storefront’s availability on the platform.</description>
    <label>Storefront Hours of Operation</label>
    <nameField>
        <displayFormat>SH-{00000000}</displayFormat>
        <label>Storefront Hours of Operation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Storefront Hours of Operation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>