force-app/main/default/objects/Storefront_Hours_of_Operation__c/fields/Closing_Time__c.field-meta.xml
<CustomField>
    <fullName>Closing_Time__c</fullName>
    <description>The time the storefront closes for the specified day.</description>
    <label>Closing Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>