force-app/main/default/objects/Storefront_Hours_of_Operation__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Additional notes about the operating hours, such as special promotions or exceptions.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>