force-app/main/default/objects/Storefront_Hours_of_Operation__c/fields/Opening_Time__c.field-meta.xml
<CustomField>
    <fullName>Opening_Time__c</fullName>
    <description>The time the storefront opens for the specified day.</description>
    <label>Opening Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>