force-app/main/default/objects/Storefront_Hours_of_Operation__c/fields/Storefront__c.field-meta.xml
<CustomField>
    <fullName>Storefront__c</fullName>
    <description>Each storefront can have multiple related records to manage daily hours, special schedules, or holiday exceptions.</description>
    <label>Storefront</label>
    <referenceTo>Storefront__c</referenceTo>
    <relationshipLabel>Hours of Operation</relationshipLabel>
    <relationshipName>Storefronts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>